--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <h2><span class="one">Balli<span class="two">Abba<span></span></h2>
         <input type="search" >
         <div id="cart" class="cart">
-            <i class="bi bi-cart4"></i>
+            <i  id="basketIcon" class="bi bi-cart4"></i>
             <div  id="cartAmount" class="cartAmount">0</div>
         </div> 
     </header>
